--- a/Arcaim.Assertor.csproj
+++ b/Arcaim.Assertor.csproj
@@ -15,6 +15,7 @@
   
     <ItemGroup>
         <FrameworkReference Include="Microsoft.AspNetCore.App" />
+        <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
         <PackageReference Include="FluentValidation" Version="9.3.0">
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
