--- a/Arcaim.Assertor.csproj
+++ b/Arcaim.Assertor.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <Description>The Assertor validates models based fluent assertion library</Description>
+    <Description>The Assertor validates models</Description>
         <Authors>Konrad Dąbrowski</Authors>
         <TargetFramework>net5.0</TargetFramework>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
@@ -16,9 +16,6 @@
     <ItemGroup>
         <FrameworkReference Include="Microsoft.AspNetCore.App" />
         <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-        <PackageReference Include="FluentValidation" Version="9.3.0">
-            <PrivateAssets>all</PrivateAssets>
-        </PackageReference>
     </ItemGroup>
 
     <ItemGroup>
