--- a/Arcaim.Assertor.csproj
+++ b/Arcaim.Assertor.csproj
@@ -16,10 +16,12 @@
     <ItemGroup>
         <FrameworkReference Include="Microsoft.AspNetCore.App" />
         <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+        <PackageReference Include="FluentValidation" Version="10.0.4" />
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Arcaim.DI.Scanner\Arcaim.DI.Scanner.csproj" />
+        <ProjectReference Include="..\Arcaim.DI.Scanner\Arcaim.DI.Scanner.csproj" />
+        <ProjectReference Include="..\Arcaim.CQRS.WebApi\Arcaim.CQRS.WebApi.csproj" />
     </ItemGroup>
 
 </Project>
