--- a/Arcaim.Assertor.csproj
+++ b/Arcaim.Assertor.csproj
@@ -10,19 +10,20 @@
     <Title>Arcaim.Assertor</Title>
     <PackageId>Arcaim.Assertor</PackageId>
     <Company>Arcaim</Company>
-    <Version>6.0.0</Version>
+    <Version>6.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App">
       <PrivateAssets>all</PrivateAssets>
     </FrameworkReference>
+    <PackageReference Include="Arcaim.DI.Scanner" Version="6.0.1">
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="FluentValidation" Version="11.0.0" />
+    <PackageReference Include="Arcaim.CQRS.WebApi" Version="6.0.1">
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
   </ItemGroup>
   
-  <ItemGroup>
-    <PackageReference Include="Arcaim.DI.Scanner" Version="6.0.0" />
-    <PackageReference Include="FluentValidation" Version="11.0.0" />
-    <PackageReference Include="Arcaim.CQRS.WebApi" Version="6.0.0" />
-  </ItemGroup>
-
 </Project>
